--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-<h1 style='color:#89BBFE'>Time<a style='color:#E0E2DB'>lee</a></h1>
+<head>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<title>Timelee</title>
+  <!-- jQuery -->
+<script src="http://thecodeplayer.com/uploads/js/jquery-1.9.1.min.js" type="text/javascript"></script>
+<!-- jQuery easing plugin -->
+<script src="http://thecodeplayer.com/uploads/js/jquery.easing.min.js" type="text/javascript"></script>
+</head>
+<body>
+<h1 class = 'logo'>Time<a>lee</a></h1>
+<div id="nav">
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a id = 'current' href="stop_procrastination.html">Stop procrastination</a></li>
+  <li ><a href="about.html">About</a></li>
+</ul>
+</div>
+<form id = 'main_form'>
+    <h2 class="week_title">Week</h2><br>
+    <label for = 'monday'>Monday:</label>
+    <input type= 'text' id = 'monday'></input>
+    <label for = 'Tuesday'>Tuesday:</label>
+    <input type= 'text' id = 'Tuesday'></input>
+    <label for = 'Wednesday'>Wednesday:</label>
+    <input type= 'text' id = 'Wednesday'></input>
+    <label for = 'Thursday'>Thursday:</label>
+    <input type= 'text' id = 'Thursday'></input>
+    <label for = 'Friday'>Friday:</label>
+    <input type= 'text' id = 'Friday'></input>
+    <label for = 'Saturday'>Saturday:</label>
+    <input type= 'text' id = 'Saturday'></input>
+    <label for = 'Sunday'>Sunday:</label>
+    <input type= 'text' id = 'Sunday'></input>
+</form>
+</body>
