--- a/about.html
+++ b/about.html
@@ -10,4 +10,7 @@
   <li ><a href="about.html">About</a></li>
 </ul>
 </div>
+<div class = 'article'>
+Timelee is a project started with an aim of helping people schedule, keep track of their time and be productive.Feedback and suggestions are welcomed at <a href='https://github.com/thefrustratedhacker/tc'>Github.</a>Updates coming soon.
+</div>
 </body>
